--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8083
-spring.datasource.url = jdbc:mysql://localhost:3306/userdb?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://mysql-service:3306/userdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password =root1234
 spring.jpa.hibernate.ddl-auto =update
